@@ -59,11 +59,14 @@ class Connection(ConnectionBase):
             infoD["DB_PORT"] = int(str(self.__cfgOb.get("EXCHANGE_DB_PORT", default=defaultPort, sectionName=sectionName)))
             infoD["DB_USER"] = self.__cfgOb.get("_EXCHANGE_DB_USER_NAME", sectionName=sectionName)
             infoD["DB_PW"] = self.__cfgOb.get("_EXCHANGE_DB_PASSWORD", sectionName=sectionName)
-            infoD["DB_ADMIN_DB_NAME"] = self.__cfgOb.get("EXCHANGE_DB_ADMIN_DB_NAME", default="admin", sectionName=sectionName)
-            infoD["DB_WRITE_CONCERN"] = self.__cfgOb.get("EXCHANGE_DB_WRITE_CONCERN", default="majority", sectionName=sectionName)
-            infoD["DB_READ_CONCERN"] = self.__cfgOb.get("EXCHANGE_DB_READ_CONCERN", default="majority", sectionName=sectionName)
-            infoD["DB_READ_PREFERENCE"] = self.__cfgOb.get("EXCHANGE_DB_READ_PREFERENCE", default="nearest", sectionName=sectionName)
-            infoD["DB_WRITE_TO_JOURNAL"] = self.__cfgOb.get("EXCHANGE_DB_WRITE_TO_JOURNAL", default=True, sectionName=sectionName)
+            infoD["DB_ADMIN_DB_NAME"] = self.__cfgOb.get("EXCHANGE_DB_ADMIN_DB_NAME", sectionName=sectionName)
+            infoD["DB_WRITE_CONCERN"] = self.__cfgOb.get("EXCHANGE_DB_WRITE_CONCERN", sectionName=sectionName)
+            infoD["DB_READ_CONCERN"] = self.__cfgOb.get("EXCHANGE_DB_READ_CONCERN", sectionName=sectionName)
+            infoD["DB_READ_PREFERENCE"] = self.__cfgOb.get("EXCHANGE_DB_READ_PREFERENCE", sectionName=sectionName)
+            infoD["DB_WRITE_TO_JOURNAL"] = self.__cfgOb.get("EXCHANGE_DB_WRITE_TO_JOURNAL", sectionName=sectionName)
+            infoD["DB_CONNECTION_TIMEOUT_MS"] = self.__cfgOb.get("EXCHANGE_DB_CONNECTION_TIMEOUT_MS", sectionName=sectionName)
+            infoD["DB_SOCKET_TIMEOUT_MS"] = self.__cfgOb.get("EXCHANGE_DB_SOCKET_TIMEOUT_MS", sectionName=sectionName)
+            infoD["DB_APP_NAME"] = self.__cfgOb.get("EXCHANGE_DB_APP_NAME", sectionName=sectionName)
         elif resourceName == "MONGO_DB":
             infoD["DB_URI"] = self.__cfgOb.get("MONGO_DB_URI", default=None, sectionName=sectionName)
             infoD["DB_NAME"] = self.__cfgOb.get("MONGO_DB_NAME", sectionName=sectionName)
@@ -72,11 +75,14 @@ class Connection(ConnectionBase):
             infoD["DB_PORT"] = int(str(self.__cfgOb.get("MONGO_DB_PORT", default=defaultPort, sectionName=sectionName)))
             infoD["DB_USER"] = self.__cfgOb.get("_MONGO_DB_USER_NAME", sectionName=sectionName)
             infoD["DB_PW"] = self.__cfgOb.get("_MONGO_DB_PASSWORD", sectionName=sectionName)
-            infoD["DB_ADMIN_DB_NAME"] = self.__cfgOb.get("MONGO_DB_ADMIN_DB_NAME", default="admin", sectionName=sectionName)
-            infoD["DB_WRITE_CONCERN"] = self.__cfgOb.get("MONGO_DB_WRITE_CONCERN", default="majority", sectionName=sectionName)
-            infoD["DB_READ_CONCERN"] = self.__cfgOb.get("MONGO_DB_READ_CONCERN", default="majority", sectionName=sectionName)
-            infoD["DB_READ_PREFERENCE"] = self.__cfgOb.get("MONGO_DB_READ_PREFERENCE", default="nearest", sectionName=sectionName)
-            infoD["DB_WRITE_TO_JOURNAL"] = self.__cfgOb.get("MONGO_DB_WRITE_TO_JOURNAL", default=True, sectionName=sectionName)
+            infoD["DB_ADMIN_DB_NAME"] = self.__cfgOb.get("MONGO_DB_ADMIN_DB_NAME", sectionName=sectionName)
+            infoD["DB_WRITE_CONCERN"] = self.__cfgOb.get("MONGO_DB_WRITE_CONCERN", sectionName=sectionName)
+            infoD["DB_READ_CONCERN"] = self.__cfgOb.get("MONGO_DB_READ_CONCERN", sectionName=sectionName)
+            infoD["DB_READ_PREFERENCE"] = self.__cfgOb.get("MONGO_DB_READ_PREFERENCE", sectionName=sectionName)
+            infoD["DB_WRITE_TO_JOURNAL"] = self.__cfgOb.get("MONGO_DB_WRITE_TO_JOURNAL", sectionName=sectionName)
+            infoD["DB_CONNECTION_TIMEOUT_MS"] = self.__cfgOb.get("MONGO_DB_CONNECTION_TIMEOUT_MS", sectionName=sectionName)
+            infoD["DB_SOCKET_TIMEOUT_MS"] = self.__cfgOb.get("MONGO_DB_SOCKET_TIMEOUT_MS", sectionName=sectionName)
+            infoD["DB_APP_NAME"] = self.__cfgOb.get("MONGO_DB_APP_NAME", sectionName=sectionName)
         else:
             infoD["DB_URI"] = self.__cfgOb.get("DB_URI", default=None, sectionName=sectionName)
             infoD["DB_NAME"] = self.__cfgOb.get("DB_NAME", sectionName=sectionName)
@@ -85,11 +91,14 @@ class Connection(ConnectionBase):
             infoD["DB_PORT"] = int(str(self.__cfgOb.get("DB_PORT", default=defaultPort, sectionName=sectionName)))
             infoD["DB_USER"] = self.__cfgOb.get("_DB_USER_NAME", sectionName=sectionName)
             infoD["DB_PW"] = self.__cfgOb.get("_DB_PASSWORD", sectionName=sectionName)
-            infoD["DB_ADMIN_DB_NAME"] = self.__cfgOb.get("DB_ADMIN_DB_NAME", default="admin", sectionName=sectionName)
-            infoD["DB_WRITE_CONCERN"] = self.__cfgOb.get("DB_WRITE_CONCERN", default="majority", sectionName=sectionName)
-            infoD["DB_READ_CONCERN"] = self.__cfgOb.get("DB_READ_CONCERN", default="majority", sectionName=sectionName)
-            infoD["DB_READ_PREFERENCE"] = self.__cfgOb.get("DB_READ_PREFERENCE", default="nearest", sectionName=sectionName)
-            infoD["DB_WRITE_TO_JOURNAL"] = self.__cfgOb.get("DB_WRITE_TO_JOURNAL", default=True, sectionName=sectionName)
+            infoD["DB_ADMIN_DB_NAME"] = self.__cfgOb.get("DB_ADMIN_DB_NAME", sectionName=sectionName)
+            infoD["DB_WRITE_CONCERN"] = self.__cfgOb.get("DB_WRITE_CONCERN", sectionName=sectionName)
+            infoD["DB_READ_CONCERN"] = self.__cfgOb.get("DB_READ_CONCERN", sectionName=sectionName)
+            infoD["DB_READ_PREFERENCE"] = self.__cfgOb.get("DB_READ_PREFERENCE", sectionName=sectionName)
+            infoD["DB_WRITE_TO_JOURNAL"] = self.__cfgOb.get("DB_WRITE_TO_JOURNAL", sectionName=sectionName)
+            infoD["DB_CONNECTION_TIMEOUT_MS"] = self.__cfgOb.get("DB_CONNECTION_TIMEOUT_MS", sectionName=sectionName)
+            infoD["DB_SOCKET_TIMEOUT_MS"] = self.__cfgOb.get("DB_SOCKET_TIMEOUT_MS", sectionName=sectionName)
+            infoD["DB_APP_NAME"] = self.__cfgOb.get("DB_APP_NAME", sectionName=sectionName)
         #
         infoD["DB_SERVER"] = dbServer
         self.setPreferences(infoD)
