@@ -7,6 +7,7 @@
 #    13-Aug-2024 dwp  update keywords for pymongo 4.x support
 #    13-Aug-2025 dwp  make use of configured port number in URI string
 #    13-Nov-2025 mjt  set URI with DB_URI instead of building it, if available
+#     2-Dec-2025 dwp  adjust mongo option priority to first use explicit settings, else use URI-provided options
 ##
 """
 Base class for managing database connection which handles application specific authentication.
@@ -25,12 +26,7 @@ import platform
 from pymongo import MongoClient
 from pymongo.errors import ConnectionFailure
 
-try:
-    # Python 3.x
-    from urllib.parse import quote_plus
-except ImportError:
-    # Python 2.x
-    from urllib import quote_plus
+from urllib.parse import quote_plus, urlparse, parse_qs
 
 logger = logging.getLogger(__name__)
 
@@ -66,6 +62,9 @@ class ConnectionBase(object):
         self.__readConcern = None
         self.__readPreference = None
         self.__writeJournalOpt = None
+        self.__connectTimeoutMS = None
+        self.__socketTimeoutMS = None
+        self.__appname = None
 
     def assignResource(self, resourceName=None, sectionName=None):
         # implement in the derived class
@@ -82,17 +81,28 @@ class ConnectionBase(object):
         try:
             self.__infoD = copy.deepcopy(infoD)
             self.__dbUri = self.__infoD.get("DB_URI", None)
+            #
+            # Extract out URI options into a dictionary
+            uriKwargD = {k: v[0] for k, v in parse_qs(urlparse(self.__dbUri).query).items()} if self.__dbUri else {}
+            # Priority of settings usage is:
+            # (1) Explicit config settings take precedence if provided (e.g., "DB_READ_PREFERENCE", ...)
+            # (2) If not explicitly defined, use URI options if provided
+            # (3) Else fallback to defaults defined below
+            #
             self.__databaseName = self.__infoD.get("DB_NAME", None)
             self.__dbHost = self.__infoD.get("DB_HOST", "localhost")
             self.__dbUser = self.__infoD.get("DB_USER", None)
             self.__dbPw = self.__infoD.get("DB_PW", None)
             self.__dbSocket = self.__infoD.get("DB_SOCKET", None)
             self.__dbServer = self.__infoD.get("DB_SERVER", "mongo")
-            self.__dbAdminDb = self.__infoD.get("DB_ADMIN_DB_NAME", "admin")
-            self.__writeConcern = self.__infoD.get("DB_WRITE_CONCERN", "majority")
-            self.__readConcern = self.__infoD.get("DB_READ_CONCERN", "majority")
-            self.__readPreference = self.__infoD.get("DB_READ_PREFERENCE", "nearest")
-            self.__writeJournalOpt = self.__infoD.get("DB_WRITE_TO_JOURNAL", True)
+            self.__dbAdminDb = self.__infoD.get("DB_ADMIN_DB_NAME", uriKwargD.get("authSource", "admin"))
+            self.__writeConcern = self.__infoD.get("DB_WRITE_CONCERN", uriKwargD.get("w", "majority"))
+            self.__readConcern = self.__infoD.get("DB_READ_CONCERN", uriKwargD.get("readConcernLevel", "majority"))
+            self.__readPreference = self.__infoD.get("DB_READ_PREFERENCE", uriKwargD.get("readPreference", "nearest"))
+            self.__writeJournalOpt = self.__infoD.get("DB_WRITE_TO_JOURNAL", uriKwargD.get("journal", True))
+            self.__connectTimeoutMS = self.__infoD.get("DB_CONNECTION_TIMEOUT_MS", uriKwargD.get("connectTimeoutMS", 60000))
+            self.__socketTimeoutMS = self.__infoD.get("DB_SOCKET_TIMEOUT_MS", uriKwargD.get("socketTimeoutMS", None))
+            self.__appname = self.__infoD.get("DB_APP_NAME", uriKwargD.get("appname", "dbloader"))
             #
             port = self.__infoD.get("DB_PORT", self.__defaultPort)
             if port and str(port):
@@ -113,7 +123,7 @@ class ConnectionBase(object):
 
         try:
             if self.__dbUri:
-                # expects complete uri. Ex: mongodb://<username>:<password>@<ip>:<port>
+                # expects complete URI, with any additional options. Ex: mongodb://<username>:<password>@<ip>:<port>
                 uri = self.__dbUri
             elif self.__dbUser and self.__dbPw and self.__dbPort:
                 uri = "mongodb://%s:%s@%s:%d/%s" % (quote_plus(self.__dbUser), quote_plus(self.__dbPw), self.__dbHost, self.__dbPort, self.__dbAdminDb)
@@ -124,11 +134,12 @@ class ConnectionBase(object):
 
             kw = {}
             kw["w"] = self.__writeConcern
-            kw["journal"] = True
-            kw["appname"] = "dbloader"
+            kw["journal"] = self.__writeJournalOpt
+            kw["appname"] = self.__appname
             kw["readConcernLevel"] = self.__readConcern
             kw["readPreference"] = self.__readPreference
-            kw["connectTimeoutMS"] = 60000  # default is 20000ms (20s)
+            kw["connectTimeoutMS"] = self.__connectTimeoutMS
+            kw["socketTimeoutMS"] = self.__socketTimeoutMS
             #
             # logger.debug("URI is %s" % uri)
             self.__dbClient = MongoClient(uri, **kw)
